Tue Aug 18 01:21:31 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* range.c (range_each): should honor to_str conversion.

Mon Aug 17 23:45:40 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/date/delta.rb: removed require 'date'.  added to_c.

Mon Aug 17 14:35:03 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* parse.y (lex_get_str, lex_io_gets, rb_parser_compile_string):
	  must be ascii compatible.

Mon Aug 17 10:37:41 2009  NARUSE, Yui  <naruse@ruby-lang.org>

	* regparse.c (add_code_range_to_buf0): added with checkdup argument.

	* regparse.c (add_code_range_to_buf): use above.

	* regparse.c (add_code_range0): added with checkdup argument.

	* regparse.c (add_code_range): use above.

	* regparse.c (i_apply_case_fold): don't warn if the duplicate is
	  caused by case folding.

Mon Aug 17 08:31:56 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/date/delta.rb: merged from date4.  [experimental]

	* lib/date/delta/parser.*: ditto.

	* lib/date.rb: followed the above changes.

Mon Aug 17 08:19:03 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/date/format.rb (strptime): removed \v; since \s includes \v.

Mon Aug 17 08:14:26 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* complex.c (nucomp_rationalize) added.  [experimental]

	* rational.c ({nurat,nilclass,integer,float}_rationalize) ditto.

Mon Aug 17 08:11:53 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/cmath.rb: use num#i.

Mon Aug 17 07:59:00 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* numeric.c (flo_pow,fix_pow): may return complex number.

	* bignum.c (rb_big_pow): ditto.

Mon Aug 17 07:16:10 2009  Yukihiro Matsumoto  <matz@ruby-lang.org>

	* numeric.c (num_imaginary): num#i to return imaginary counterpart
	  of the given numeric.

	* complex.c (Init_Complex): undef #i for complex numbers.

Mon Aug 17 00:17:33 2009  Tadayoshi Funaba  <tadf@dotrb.org>

	* lib/complex.rb, lib/rational.rb: added warning messages.

Sun Aug 16 23:58:22 2009  Nobuyoshi Nakada  <nobu@ruby-lang.org>
