@@ -18,6 +18,10 @@ class TestRange < Test::Unit::TestCase
     assert_equal(["9", "10"], ("9"..SimpleDelegator.new("10")).to_a)
   end
 
+  def test_range_symbol
+    assert_equal([:a, :b], (:a .. :b).to_a)
+  end
+
   def test_evaluation_order
     arr = [1,2]
     r = (arr.shift)..(arr.shift)
